--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,13 +8,10 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [14.x]
-
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
@@ -22,5 +19,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - run: NODE_ENV=production RPG_TYPE=rpg npm run build
       - run: npm test
+  deploy:
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - name: deploy
+        run: NODE_ENV=production RPG_TYPE=rpg npm run build
+      
