--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,9 +8,11 @@ on:
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Use Node.js 14.x
         uses: actions/setup-node@v3
         with:
@@ -26,5 +28,24 @@ jobs:
         with: 
           name: standalone-site
           path: dist/standalone
+    deploy:
+      name: Deploy
+      runs-on: ubuntu-latest
+      needs: [build]
+      steps:
+        - name: Get build artifact
+          uses: actions/download-artifact@v2
+          with:
+            name: standalone-site
+        - uses: jakejarvis/s3-sync-action@master
+          with:
+            args: --follow-symlinks --delete
+          env:
+            AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_REGION: 'us-west-1'   # optional: defaults to us-east-1
+            SOURCE_DIR: 'public'
+      
       
       
