--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,6 +37,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: standalone-site
+          path: standalone
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --follow-symlinks --delete
