Display the downloaded artifact

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,8 +36,9 @@ jobs:
       - name: Get build artifact
         uses: actions/download-artifact@v2
         with:
-          name: standalone-site
-          path: standalone
+          name: standalone
+      - name: Display structure of downloaded files
+        run: ls -R
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --follow-symlinks --delete
@@ -46,7 +47,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_KEY_SECRET }}
           AWS_REGION: 'us-east-1'   # optional: defaults to us-east-1
-          SOURCE_DIR: 'standalone-site'
+          SOURCE_DIR: 'standalone'
       
       
       
