--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Get build artifact
         uses: actions/download-artifact@v2
         with:
-          name: standalone
+          name: standalone-site
       - name: Display structure of downloaded files
         run: ls -R
       - uses: jakejarvis/s3-sync-action@master
