--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,8 +46,7 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.AWS_DEPLOY_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_KEY_SECRET }}
-          AWS_REGION: 'us-east-1'   # optional: defaults to us-east-1
-          SOURCE_DIR: 'standalone'
+          AWS_REGION: 'us-east-1'
       
       
       
