--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,13 +32,14 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: [build]
+    environment:
+      name: production
+      url: www.tkuipers.ca
     steps:
       - name: Get build artifact
         uses: actions/download-artifact@v2
         with:
           name: standalone-site
-      - name: Display structure of downloaded files
-        run: ls -R
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --follow-symlinks --delete
