--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,6 +32,7 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: [build]
+    if: github.ref == 'refs/heads/main'
     environment:
       name: production
       url: www.tkuipers.ca
